[package]
name = "bipa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1.88"
bb8 = "0.9.0"
bb8-redis = "0.24.0"
anyhow = "1.0.98"
