[package]
name = "bipa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
async-trait = "0.1.88"
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bb8 = "0.9.0"
bb8-redis = "0.24.0"

anyhow = "1.0.98"
thiserror = "2.0.12"

[features]
disable_api = []
disable_worker = []
